--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="%VITE_LOGO_URL%" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Novo Horizontino</title>
+    <title>%VITE_TITLE%</title>
   </head>
   <body>
     <div id="root"></div>
